# datalex

./: Cargo.toml  README.md
example/: query.datalog
src/: main.rs
