[package]
name = "datalex"
version = "0.1.0"
authors = ["Ferran Basora <fcsonline@gmail.com>"]
proc-macro = true

[features]

default = ["lexer", "parser"]
lexer = ["redfa"]
parser = ["lalr"]

[dependencies]
plex = "0.2.5"
lalr = { version = "0.0.2", optional = true }
redfa = { version = "0.0.2", optional = true }
syn = { version = "0.15.36", features = ["extra-traits", "full"] }
proc-macro2 = { version = "0.4.3", features = ["nightly"] }
quote = "0.6.0"
